--- a/index.html
+++ b/index.html
@@ -14,8 +14,31 @@
     />
   </head>
   <body>
-    <h1>Alo</h1>
-    <h2>oioi</h2>
-    <a href="">a</a>
+   <header class="container">
+    <nav id="primary" class="grid grid-flow-col">
+        <div>
+            <img src="assets/icons/List.svg" alt="ícone de menu">
+            <strong>Menu</strong>
+        </div>
+
+        <div>
+            <img src="assets/Logo.svg" alt="Technews logo">
+        </div>
+
+        <div>
+            <strong>Buscar</strong>
+            <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de busca">
+        </div>
+    </nav>
+    <nav id="secondary" class="grid grid-flow-col">
+        <a href="#">Inteligência Artificial</a>
+        <a href="#">Blockchain</a>
+        <a href="#">Hologramas</a>
+        <a href="#">Internet</a>
+        <a href="#">Vestíveis</a>
+        <a href="#">Realidade Aumentada</a>
+        <a href="#">Realidade Virtual</a>
+    </nav>
+   </header>
   </body>
 </html>
