--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     />
   </head>
   <body>
-   <header class="container">
-    <nav id="primary" class="grid grid-flow-col">
-        <div>
-            <img src="assets/icons/List.svg" alt="ícone de menu">
-            <strong>Menu</strong>
+    <header class="container">
+      <nav id="primary" class="grid grid-flow-col">
+        <div class="flex-align">
+          <img src="assets/icons/List.svg" alt="ícone de menu" />
+          <strong>Menu</strong>
         </div>
 
-        <div>
-            <img src="assets/Logo.svg" alt="Technews logo">
+        <div class="flex-align">
+          <img src="assets/Logo.svg" alt="Technews logo" />
         </div>
 
-        <div>
-            <strong>Buscar</strong>
-            <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de busca">
+        <div class="flex-align">
+          <strong>Buscar</strong>
+          <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de busca" />
         </div>
-    </nav>
-    <nav id="secondary" class="grid grid-flow-col">
+      </nav>
+      <nav id="secondary" class="grid grid-flow-col">
         <a href="#">Inteligência Artificial</a>
         <a href="#">Blockchain</a>
         <a href="#">Hologramas</a>
@@ -38,7 +38,31 @@
         <a href="#">Vestíveis</a>
         <a href="#">Realidade Aumentada</a>
         <a href="#">Realidade Virtual</a>
-    </nav>
-   </header>
+      </nav>
+    </header>
+    <main class="grid container">
+      <section id="featured" class="grid grid-flow-col gap-16">
+        <div>
+          <img src="assets/images/Image 01.png" alt="" />
+        </div>
+        <div class="grid grid-cols-2 gap-16">
+          <div>
+            <img src="assets/images/Image 02.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/images/Image 03.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/images/Image 04.png" alt="" />
+          </div>
+
+          <div>
+            <img src="assets/images/Image 05.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
