--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </article>
         </div>
       </section>
-      <div>
+      <aside>
         <div id="ads">
           <img src="assets/images/Ads.png" alt="Aplicativo utiliza inteligência artificial para ajudar usuários
                 a manterem o foco e aumentarem a produtividade no dia a dia." />
@@ -328,7 +328,7 @@
             </article>
           </div>
         </section>
-      </div>
+      </aside>
     </main>
   </body>
 </html>
